# EnvGraph

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Cargo.toml  LICENSE  build.rs  cube_data.h  engine.cpp  engine.h  engine_defs.h  main.cpp  pipelines.h  vk_utils.cpp  vk_utils.h
asset_schemas/: asset_bundle.fbs
examples/radio/: main.cpp
include/: common.h  engine.h  events.h  log.h  pipelines.h  subsystems.h
include/ui/: input.h  view.h  view_controller.h
include/vk/: subsystem.h
interfaces/engine/: asset.ixx  engine.ixx  log.ixx  pipeline.ixx  platform.ixx  pubsub.ixx
pipelines/: control.cpp  control.h  kinect_mesh.cpp  kinect_mesh.h  radio.cpp  radio.h  ui.cpp  ui.h  voxel.h
scripts/: generate_spirv.py
shaders/: control.frag  kinect_mesh.vert  radio.comp  radio.vert  text.frag  text.vert  ui.vert  voxel.vert
src/: CMakeLists.txt  common.cc  engine.cc  main.rs
src/app/: mod.rs  render.rs  text.rs  ui.rs
src/page/: mod.rs
src/signal/: mod.rs
src/ui/: CMakeLists.txt  input.cc  view.cc  view_controller.cc  view_win32.cc
src/vk/: CMakeLists.txt  subsystem.cc
tests/: CMakeLists.txt  asset-ut.cc  base.h  engine-ut.cc  log-ut.cc  platforms-ut.cc  pubsub-ut.cc  view_base.h
tests/camera/: control_ut.cc  virtual_camera_ut.cc
tests/depth/: CMakeLists.txt  depth_ut_base.h  edge_ut.cc
tests/dx12/: CMakeLists.txt  engine_ut.cc  utils_ut.cc  view_ut.cc
tests/engine/: CMakeLists.txt  engine_ut.cc  log_ut.cc  mock_pipelines.h  pipelines_ut.cc
tests/events/: CMakeLists.txt  event_ut.cc  mock_object.h
tests/ui/: CMakeLists.txt  input_ut.cc  view_ut.cc
tests/vk/: engine_ut.cc
ui/: CMakeLists.txt  holo_utils.h  items.h  prims.h  view.cc  view_controller.cc  view_controller.h
