[package]
name = "EnvGraph"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level=1

[dependencies]
ab_glyph = "0.2.21"
glam = { version = "0.24.0", features = ["bytemuck"] }
image = "0.24"
vulkano = "0.33"
vulkano-win = "0.33"
vulkano-shaders = "0.33"
winit = "0.28.6"

[build-dependencies]
bindgen = "0.65"
